# agent_orchestration

./: README.md
agent_package/: LICENSE  MANIFEST.in  __init__.py  app.py  controller.py  orchestrator.py  planner.py  pyproject.toml  requirements.txt
agent_package/src/agentic_team_orchestrator/: app.py  cli.py  controller.py  orchestrator.py  planner.py
agent_package/src/agentic_team_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
